--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2032,7 +2032,7 @@ footer {
     #error__msj {
 
         .error__msj--content {
-            padding: 0;
+            padding: 10px 0 25px;
 
             .msj__error {
                 padding-right: 10px;
